2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/07_PrintSansCparent.deca
// Description:
//    tests de programme print sans "°" même test pour println, printx, printlnx
//
// Resultats:
//    ligne 10  : Erreur,  missing ')' at ';'
//
// Historique:
//    cree le 09/01/2024
{ 
    print("hello";
}